--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 1.0.11)
 LinkingTo: Rcpp
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
